some code styling and minor refactoring